[tool.poetry]
name = "potion"
version = "0.1.0"
description = ""
authors = ["dardonacci <federico.cardoso.e@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
